[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idempy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[dependency-groups]
dev = [
    "django>=5.2.12",
    "fastapi>=0.135.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
]
