[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idempy"
version = "0.1.0"
description = "Lightweight Python library for safe, pluggable idempotent operations — prevents duplicate side effects when requests are retried."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ashleigh Hewitt" }]
keywords = ["idempotency", "idempotent", "requests", "payments", "webhooks", "retry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=4.0"]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.100", "httpx>=0.23"]
django = ["django>=4.0"]
all = ["redis>=4.0", "flask>=2.0", "fastapi>=0.100", "httpx>=0.23", "django>=4.0"]
dev = [
    "pytest",
    "fakeredis>=2.0",
    "flask>=2.0",
    "fastapi>=0.100",
    "httpx>=0.23",
    "django>=4.0",
]

[project.urls]
Homepage = "https://github.com/ashleighhewitt/idempy"
Repository = "https://github.com/ashleighhewitt/idempy"
"Bug Tracker" = "https://github.com/ashleighhewitt/idempy/issues"
Changelog = "https://github.com/ashleighhewitt/idempy/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "django>=5.2.12",
    "fakeredis>=2.34.1",
    "fastapi>=0.135.3",
    "flask>=3.1.3",
    "httpx>=0.28.1",
]
